--- a/force-app/main/default/lwc/jsconfig.json
+++ b/force-app/main/default/lwc/jsconfig.json
@@ -5,6 +5,9 @@
         "paths": {
             "c/helloWorld": [
                 "helloWorld/helloWorld.js"
+            ],
+            "c/myComponent": [
+                "myComponent/myComponent.js"
             ]
         }
     },
